@@ -1,1 +1,4 @@
 #Settlers of Catan
+
+Run>Edit Configuration>Modify Options> Add VM Options> Paste
+--module-path "javafx-sdk-17.0.1/lib" --add-modules javafx.controls,javafx.fxml
